MB-26390: CouchKVStore::getMultiCb: set non-zero status correctly

If a couchstore file becomes corrupted such that a document cannot be
fetched from disk using getMulti (returning CHECKSUM_FAIL or any other
non-zero status), then instead of logging and returning a error to the
user (TMPFAIL), KV-Engine incorrectly returns ENOENT - i.e. document
doesn't exist.

The issue is that the status code was set *after* the rest of GetValue
had already been assigned elsewhere, meaning a non-zero status code
was lost. The bug was introduced by commit
4df093d4e1e7c65158c8539604b6f1907951ae15, which refactored GetMulti
ownership.

Change-Id: I70f4f3eba48e453ec3e5aba15821f0f041f45928
Reviewed-on: http://review.couchbase.org/84363
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>